--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,10 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "baseUrl": ".",
+    "strictNullChecks": false,
     "types": [
       "webpack-env",
+      "node",
       "jest"
     ],
     "paths": {
@@ -35,6 +37,10 @@
     "tests/**/*.tsx"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "tests"
+  ],
+  "files": [
+    "src/types.d.ts"
   ]
 }
